apps/staging/flaresolverr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flaresolverr
  namespace: media
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - flaresolverr.christophervestman.com
      secretName: flaresolverr-tls
  rules:
    - host: flaresolverr.christophervestman.com
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: flaresolverr
                port:
                  number: 8191
